fix: caption hiding behind image issue (#1283)
* fix: caption hiding behind image issue

* fix: inline styling changed to class

* fix: div cannot be a child of a <p> tag

--- a/src/components/ReadMore/index.css
+++ b/src/components/ReadMore/index.css
@@ -7,3 +7,10 @@
 .read__more__less:hover {
   color: rgb(6, 33, 115);
 }
+
+.caption_container {
+  z-Index:1;
+background-color: white;
+opacity: 0.7;
+
+}
